Update top up history
