# app/Models/Wallet.php
@@ -4,14 +4,14 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 
-class UserPhoto extends Model
+class Wallet extends Model
 {
     protected $keyType = 'string';
     public $timestamps = false;
     public $incrementing = false;
 
     protected $fillable = [
-        'image',
+        'amount',
     ];
 
     protected $hidden = [
